# libfgm

./: AutoRegressionModel.cpp  AutoRegressionModel.h  CMakeLists.txt  CannyEdgeDetector.cpp  CannyEdgeDetector.h  Convolution.cpp  Convolution.h  FrequencyFilteringModel.cpp  FrequencyFilteringModel.h  Gradient.cpp  Gradient.h  KalmanFilter.cpp  KalmanFilter.h  README.md  WienerFilter.cpp  WienerFilter.h  common.cpp  common.h  main.cpp  yuv.cpp  yuv.h
